Updated uploaded files

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
       <img class="cabecalho__splash" src="./assets/img/Forma 1.svg" />
     </header>
     <main>
+      <section class="corpo__splash__container">
       <img class="corpo__splash" src="/assets/img/Forma 2.svg">
+      </section>
       <section class="chamada__container">
         <a href="#" class="logo__ancora">
           <img src="assets/img/logo.svg" alt="Logo da adopet" class="logo__imagem" />
