--- a/login.html
+++ b/login.html
@@ -3,21 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>adopet - Boas-vindas!</title>
+    <title>adopet - Login</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@500&family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="assets/css/base/reset.css" />
     <link rel="stylesheet" href="assets/css/base/base.css" />
-    <link rel="stylesheet" href="assets/css/style-index.css" />
+    <link rel="stylesheet" href="assets/css/style-cadastro.css">
     <link rel="stylesheet" href="assets/css/componentes/botao.css" />
     <link rel="stylesheet" href="assets/css/componentes/cabecalho.css" />
+    <link rel="stylesheet" href="assets/css/componentes/formulario.css" />
     <link rel="stylesheet" href="assets/css/componentes/logo.css" />
     <link rel="stylesheet" href="assets/css/componentes/rodape.css" />
   </head>
 
-  <body class="fundo__inicial">
-    <header class="cabecalho">
+  <body class="fundo__cadastro">
+    <header class="cabecalho cabecalho__patas">
       <section class="cabecalho__container home">
         <nav class="cabecalho__icones">
           <a href="#" class="icone__cabecalho cabecalho__home">
@@ -30,23 +31,28 @@
       </section>
     </header>
     <main>
-      <section class="corpo__splash__container">
-      <img class="corpo__splash" src="/assets/img/Forma 2.svg">
-      </section>
-      <section class="chamada__container">
-        <a href="#" class="logo__ancora">
-          <img src="assets/img/logo.svg" alt="Logo da adopet" class="logo__imagem" />
-        </a>
-        <h3 class="chamada__titulo">Boas-vindas!</h3>
-        <p class="chamada__texto">Que tal mudar sua vida adotando seu novo melhor amigo? Vem com a gente!</p>
-        <section class="botao__container">
-          <button class="botao">Já tenho conta</button>
-          <button class="botao">Quero me cadastrar</button>
+      <section class="container chamada__container">
+        <section class="logo__container">
+          <a href="#" class="logo__ancora">
+            <img src="assets/img/Logo_2.svg" alt="Logo da adopet" class="logo__imagem" />
+          </a>
         </section>
+        <p class="chamada__cadastro">Já tem conta? Faça login:</p>
       </section>
-      <section class="ilustracao__container">
-      <img src="/assets/img/Ilustração 1.svg" class="ilustracao__1">
-      </section>
+      <form class="formulario__container">
+        <div class="input__container">
+        <label class="label__cadastro" for="email">E-mail</label>
+        <input class="input_cadastro" type="email" placeholder="Insira seu email" aria-label="Insira seu email" id="email">
+        </div>
+        
+        <div class="input__container">
+        <label class="label__cadastro" for="senha">Senha</label>
+        <input class="input_cadastro" type="password" placeholder="Insira sua senha" aria-label="Insira sua senha" id="senha">
+        <i class="toggle__senha"><img src="/assets/img/Vector-password.svg" alt=""></i>
+        </div>
+        <a class="recuperar__senha" href="#">Esqueci minha senha.</a>
+      </form>
+      <button class="botao botao__login">Entrar</button>
     </main>
     <footer>
       <section class="rodape">
@@ -55,3 +61,5 @@
     </footer>
   </body>
 </html>
+
+</input>
