--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         <h3 class="chamada__titulo">Boas-vindas!</h3>
         <p class="chamada__texto">Que tal mudar sua vida adotando seu novo melhor amigo? Vem com a gente!</p>
         <section class="botao__container">
-          <button class="botao">Já tenho conta</button>
-          <button class="botao">Quero me cadastrar</button>
+          <button class="botao"><a href="/login.html">Já tenho conta</a></button>
+          <button class="botao"><a href="/cadastro.html">Quero me cadastrar</a></button>
         </section>
       </section>
       <section class="ilustracao__container">
