Add and upgrade files via upload

--- a/mensagem.html
+++ b/mensagem.html
@@ -22,6 +22,9 @@
     <header class="cabecalho">
       <section class="cabecalho__container home">
         <nav class="cabecalho__icones">
+          <a href="#" class="icone__cabecalho cabecalho__logo">
+            <img src="assets/img/Logo_cabecalho.svg" class="cabecalho__logo_icone" alt="Logo da adopet" />
+          </a>
           <a href="#" class="icone__cabecalho cabecalho__home">
             <img src="assets/img/Casa.svg" class="cabecalho__home_icone" alt="Home" />
           </a>
@@ -29,7 +32,9 @@
             <img src="assets/img/Mensagens.svg" class="cabecalho__contato_icone" alt="Contatos" />
           </a>
           <a href="#" class="icone__cabecalho cabecalho__usuario">
-            <img src="assets/img/Usuário.svg" class="cabecalho__usuario_icone" alt="Contatos" />
+            <img src="assets/img/Usuário.svg" class="cabecalho__usuario_icone_pequeno" alt="Contatos" />
+            <img src="assets/img/Usuário_768px.svg" class="cabecalho__usuario_icone_medio" alt="Contatos" />
+            <img src="assets/img/Usuário_1440px.svg" class="cabecalho__usuario_icone_grande" alt="Contatos" />
           </a>
         </nav>
       </section>
@@ -56,7 +61,7 @@
 
           <div class="input__container">
             <label class="label__mensagem" for="email">Mensagem</label>
-            <textarea class="input__mensagem input_campo_mensagem" type="text" placeholder="Escreva sua mensagem." aria-label="Escreva sua mensagem." id="text"></textarea>
+            <textarea class="input__mensagem input__campo__mensagem" type="text" placeholder="Escreva sua mensagem." aria-label="Escreva sua mensagem." id="text"></textarea>
           </div>
           <button class="botao botao__mensagem">Enviar</button>
           </form>
