--- a/home.html
+++ b/home.html
@@ -22,6 +22,9 @@
     <header class="cabecalho">
       <section class="cabecalho__container home">
         <nav class="cabecalho__icones">
+          <a href="#" class="icone__cabecalho cabecalho__logo">
+            <img src="assets/img/Logo_cabecalho.svg" class="cabecalho__logo_icone" alt="Logo da adopet" />
+          </a>
           <a href="#" class="icone__cabecalho cabecalho__home">
             <img src="assets/img/Casa.svg" class="cabecalho__home_icone" alt="Home" />
           </a>
@@ -29,14 +32,16 @@
             <img src="assets/img/Mensagens.svg" class="cabecalho__contato_icone" alt="Contatos" />
           </a>
           <a href="#" class="icone__cabecalho cabecalho__usuario">
-            <img src="assets/img/Usuário.svg" class="cabecalho__usuario_icone" alt="Contatos" />
+            <img src="assets/img/Usuário.svg" class="cabecalho__usuario_icone_pequeno" alt="Contatos" />
+            <img src="assets/img/Usuário_768px.svg" class="cabecalho__usuario_icone_medio" alt="Contatos" />
+            <img src="assets/img/Usuário_1440px.svg" class="cabecalho__usuario_icone_grande" alt="Contatos" />
           </a>
         </nav>
       </section>
     </header>
     <main>
       <section class="container chamada__container">
-        <p class="chamada__mensagem">Olá! Veja os amigos disponíveis para adoção!</p>
+        <p class="chamada__mensagem">Olá!&nbsp;</p><p class="chamada__mensagem">Veja os amigos disponíveis para adoção!</>
       </section>
       <section class="container__disponiveis">
         <ul class="lista__disponiveis">
