--- a/inicial.html
+++ b/inicial.html
@@ -3,21 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>adopet - Login</title>
+    <title>adopet - Boas-vindas!</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@500&family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="assets/css/base/reset.css" />
     <link rel="stylesheet" href="assets/css/base/base.css" />
+    <link rel="stylesheet" href="assets/css/style-index.css" />
     <link rel="stylesheet" href="assets/css/componentes/botao.css" />
     <link rel="stylesheet" href="assets/css/componentes/cabecalho.css" />
-    <link rel="stylesheet" href="assets/css/componentes/formulario.css" /
     <link rel="stylesheet" href="assets/css/componentes/logo.css" />
     <link rel="stylesheet" href="assets/css/componentes/rodape.css" />
-    <link rel="stylesheet" href="assets/css/style-login.css">
   </head>
 
-  <body class="fundo__cadastro">
+  <body class="fundo__inicial">
     <header class="cabecalho cabecalho__patas">
       <section class="cabecalho__container home">
         <nav class="cabecalho__icones">
@@ -34,27 +33,23 @@
       </section>
     </header>
     <main>
-      <section class="container chamada__container">
-        <section class="logo__container">
-          
-          </a>
-        </section>
-        <p class="chamada__cadastro">Já tem conta? Faça login:</p>
+      <section class="corpo__splash__container">
+      <img class="corpo__splash" src="/assets/img/Forma 2.svg">
       </section>
-      <form class="formulario__container">
-        <div class="input__container">
-        <label class="label__cadastro" for="email">E-mail</label>
-        <input class="input_cadastro input__login__email" type="email" placeholder="Insira seu email" aria-label="Insira seu email" id="email">
-        </div>
-        
-        <div class="input__container">
-        <label class="label__cadastro" for="senha">Senha</label>
-        <input class="input_cadastro input__login__senha" type="password" placeholder="Insira sua senha" aria-label="Insira sua senha" id="senha">
-        <i class="toggle__senha"><img src="/assets/img/Vector-password.svg" alt=""></i>
-        </div>
-        <a class="recuperar__senha" href="#">Esqueci minha senha.</a>
-      </form>
-      <button class="botao botao__login">Entrar</button>
+      <section class="chamada__container">
+        <a href="#" class="logo__ancora">
+          <img src="assets/img/logo.svg" alt="Logo da adopet" class="logo__imagem" />
+        </a>
+        <h3 class="chamada__titulo">Boas-vindas!</h3>
+        <p class="chamada__texto">Que tal mudar sua vida adotando seu novo melhor amigo? Vem com a gente!</p>
+        <section class="botao__container">
+          <button class="botao"><a href="/login.html">Já tenho conta</a></button>
+          <button class="botao"><a href="/cadastro.html">Quero me cadastrar</a></button>
+        </section>
+      </section>
+      <section class="ilustracao__container">
+      <img src="/assets/img/Ilustração 1.svg" class="ilustracao__1">
+      </section>
     </main>
     <footer>
       <section class="rodape">
@@ -63,5 +58,3 @@
     </footer>
   </body>
 </html>
-
-</input>
