--- a/home.html
+++ b/home.html
@@ -9,11 +9,9 @@
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@500&family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="assets/css/base/reset.css" />
     <link rel="stylesheet" href="assets/css/base/base.css" />
-  
     <link rel="stylesheet" href="assets/css/componentes/botao.css" />
     <link rel="stylesheet" href="assets/css/componentes/cabecalho.css" />
     <link rel="stylesheet" href="assets/css/componentes/formulario.css" />
-    <link rel="stylesheet" href="assets/css/componentes/logo.css" />
     <link rel="stylesheet" href="assets/css/componentes/rodape.css" />
     <link rel="stylesheet" href="assets/css/style-home.css"/>
   </head>
@@ -45,132 +43,6 @@
       </section>
       <section class="container__disponiveis">
         <ul class="lista__disponiveis">
-          <li class="cartao__pet">
-            <img class="cartao__pet__foto" src="assets/img/pet_01.png" alt="XYZ">
-            <div class="cartao__descricao">
-              <h4 class="cartao__nome">Dunga</h4>
-              <p class="cartao__detalhes">2 anos</p>
-              <p class="cartao__detalhes">Porte pequeno</p>
-              <p class="cartao__detalhes">Calmo e educado</p>
-              <p class="cartao__localizacao">Rio de Janeiro (RJ)</p>
-              <a href="#" class="cartao__mensagem">
-                <img src="assets/img/icone_mensagem.svg" alt="" class="cartao__mensagem__icone">
-                <p class="cartao__mensagem__texto">Falar com responsável</p>
-              </a>
-            </div>
-          </li>
-          <li class="cartao__pet">
-            <img class="cartao__pet__foto" src="assets/img/pet_02.png" alt="XYZ">
-            <div class="cartao__descricao">
-              <h4 class="cartao__nome">Felícia</h4>
-              <p class="cartao__detalhes">3 meses</p>
-              <p class="cartao__detalhes">Porte pequeno</p>
-              <p class="cartao__detalhes">Ativa e carinhosa</p>
-              <p class="cartao__localizacao">Nova Iguaçu (RJ)</p>
-              <a href="#" class="cartao__mensagem">
-                <img src="assets/img/icone_mensagem.svg" alt="" class="cartao__mensagem__icone">
-                <p class="cartao__mensagem__texto">Falar com responsável</p>
-              </a>
-            </div>
-          </li>
-          <li class="cartao__pet">
-            <img class="cartao__pet__foto" src="assets/img/pet_03.png" alt="XYZ">
-            <div class="cartao__descricao">
-              <h4 class="cartao__nome">Sirius</h4>
-              <p class="cartao__detalhes">6 meses</p>
-              <p class="cartao__detalhes">Porte grande</p>
-              <p class="cartao__detalhes">Ativo e educado</p>
-              <p class="cartao__localizacao">Duque de Caxias (RJ)</p>
-              <a href="#" class="cartao__mensagem">
-                <img src="assets/img/icone_mensagem.svg" alt="" class="cartao__mensagem__icone">
-                <p class="cartao__mensagem__texto">Falar com responsável</p>
-              </a>
-            </div>
-          </li>
-          <li class="cartao__pet">
-            <img class="cartao__pet__foto" src="assets/img/pet_04.png" alt="XYZ">
-            <div class="cartao__descricao">
-              <h4 class="cartao__nome">Fiona</h4>
-              <p class="cartao__detalhes">3 anos</p>
-              <p class="cartao__detalhes">Porte pequeno</p>
-              <p class="cartao__detalhes">Calma e carinhosa</p>
-              <p class="cartao__localizacao">São Gonçalo (RJ)</p>
-              <a href="#" class="cartao__mensagem">
-                <img src="assets/img/icone_mensagem.svg" alt="" class="cartao__mensagem__icone">
-                <p class="cartao__mensagem__texto">Falar com responsável</p>
-              </a>
-            </div>
-          </li>
-          <li class="cartao__pet">
-            <img class="cartao__pet__foto" src="assets/img/pet_05.png" alt="XYZ">
-            <div class="cartao__descricao">
-              <h4 class="cartao__nome">Sid</h4>
-              <p class="cartao__detalhes">8 meses</p>
-              <p class="cartao__detalhes">Porte médio/grande</p>
-              <p class="cartao__detalhes">Brincalhão e amável</p>
-              <p class="cartao__localizacao">Rio de Janeiro (RJ)</p>
-              <a href="#" class="cartao__mensagem">
-                <img src="assets/img/icone_mensagem.svg" alt="" class="cartao__mensagem__icone">
-                <p class="cartao__mensagem__texto">Falar com responsável</p>
-              </a>
-            </div>
-          </li>
-          <li class="cartao__pet">
-            <img class="cartao__pet__foto" src="assets/img/pet_06.png" alt="XYZ">
-            <div class="cartao__descricao">
-              <h4 class="cartao__nome">Yoda</h4>
-              <p class="cartao__detalhes">1 ano</p>
-              <p class="cartao__detalhes">Porte médio</p>
-              <p class="cartao__detalhes">Ativo e carinhoso</p>
-              <p class="cartao__localizacao">Nova Iguaçu (RJ)</p>
-              <a href="#" class="cartao__mensagem">
-                <img src="assets/img/icone_mensagem.svg" alt="" class="cartao__mensagem__icone">
-                <p class="cartao__mensagem__texto">Falar com responsável</p>
-              </a>
-            </div>
-          </li>
-          <li class="cartao__pet">
-            <img class="cartao__pet__foto" src="assets/img/pet_07.png" alt="XYZ">
-            <div class="cartao__descricao">
-              <h4 class="cartao__nome">Lua</h4>
-              <p class="cartao__detalhes">6 meses</p>
-              <p class="cartao__detalhes">Porte médio</p>
-              <p class="cartao__detalhes">Ativa e carinhosa</p>
-              <p class="cartao__localizacao">Duque de Caxias (RJ)</p>
-              <a href="#" class="cartao__mensagem">
-                <img src="assets/img/icone_mensagem.svg" alt="" class="cartao__mensagem__icone">
-                <p class="cartao__mensagem__texto">Falar com responsável</p>
-              </a>
-            </div>
-          </li>
-          <li class="cartao__pet">
-            <img class="cartao__pet__foto" src="assets/img/pet_08.png" alt="XYZ">
-            <div class="cartao__descricao">
-              <h4 class="cartao__nome">Amora</h4>
-              <p class="cartao__detalhes">45 dias</p>
-              <p class="cartao__detalhes">Porte grande</p>
-              <p class="cartao__detalhes">Calma e carinhosa</p>
-              <p class="cartao__localizacao">São Gonçalo (RJ)</p>
-              <a href="#" class="cartao__mensagem">
-                <img src="assets/img/icone_mensagem.svg" alt="" class="cartao__mensagem__icone">
-                <p class="cartao__mensagem__texto">Falar com responsável</p>
-              </a>
-            </div>
-          </li>
-          <li class="cartao__pet">
-            <img class="cartao__pet__foto" src="assets/img/pet_09.png" alt="XYZ">
-            <div class="cartao__descricao">
-              <h4 class="cartao__nome">Zelda</h4>
-              <p class="cartao__detalhes">5 meses</p>
-              <p class="cartao__detalhes">Porte médio</p>
-              <p class="cartao__detalhes">Ativa e amável</p>
-              <p class="cartao__localizacao">Rio de Janeiro (RJ)</p>
-              <a href="#" class="cartao__mensagem">
-                <img src="assets/img/icone_mensagem.svg" alt="" class="cartao__mensagem__icone">
-                <p class="cartao__mensagem__texto">Falar com responsável</p>
-              </a>
-            </div>
-          </li>
         </ul>
       </section>
 
@@ -180,4 +52,5 @@
       </section>
     </footer>
     </body>
+    <script type="module" src="/assets/js/controller/home-controller.js"></script>
     </html>
