--- a/perfil.html
+++ b/perfil.html
@@ -13,7 +13,6 @@
     <link rel="stylesheet" href="assets/css/componentes/botao.css" />
     <link rel="stylesheet" href="assets/css/componentes/cabecalho.css" />
     <link rel="stylesheet" href="assets/css/componentes/formulario.css" />
-    <link rel="stylesheet" href="assets/css/componentes/logo.css" />
     <link rel="stylesheet" href="assets/css/componentes/rodape.css" />
     <link rel="stylesheet" href="assets/css/style-mensagem-perfil.css"/>
   </head>
@@ -71,7 +70,7 @@
 
           <div class="input__container">
             <label class="label__mensagem" for="sobre">Sobre</label>
-            <textarea class="input__mensagem input__campo__mensagem" type="text" placeholder="At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati." aria-label="At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati." id="sobre"></textarea>
+            <textarea class="input__mensagem input__campo__sobre" type="text" placeholder="At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati." aria-label="At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati." id="sobre"></textarea>
           </div>
           <button class="botao botao__mensagem">Enviar</button>
           </form>
