--- a/inicial.html
+++ b/inicial.html
@@ -9,15 +9,15 @@
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@500&family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="assets/css/base/reset.css" />
     <link rel="stylesheet" href="assets/css/base/base.css" />
-    <link rel="stylesheet" href="assets/css/style-index.css" />
     <link rel="stylesheet" href="assets/css/componentes/botao.css" />
     <link rel="stylesheet" href="assets/css/componentes/cabecalho.css" />
-    <link rel="stylesheet" href="assets/css/componentes/logo.css" />
+    <link rel="stylesheet" href="assets/css/componentes/chamada.css" />
     <link rel="stylesheet" href="assets/css/componentes/rodape.css" />
+    <link rel="stylesheet" href="assets/css/style-index.css" />
   </head>
 
   <body class="fundo__inicial">
-    <header class="cabecalho cabecalho__patas">
+    <header class="cabecalho">
       <section class="cabecalho__container home">
         <nav class="cabecalho__icones">
           <a href="#" class="icone__cabecalho cabecalho__logo">
@@ -33,26 +33,25 @@
       </section>
     </header>
     <main>
-      <section class="corpo__splash__container">
-      <img class="corpo__splash" src="/assets/img/Forma 2.svg">
-      </section>
       <section class="chamada__container">
-        <a href="#" class="logo__ancora">
-          <img src="assets/img/logo.svg" alt="Logo da adopet" class="logo__imagem" />
-        </a>
+        <section class="logo__index">
+          
+        </section>
         <h3 class="chamada__titulo">Boas-vindas!</h3>
         <p class="chamada__texto">Que tal mudar sua vida adotando seu novo melhor amigo? Vem com a gente!</p>
+        <p class="chamada__texto__2">Adotar pode mudar uma vida. Que tal buscar seu novo melhor amigo hoje?
+          Vem com a gente!</p>
         <section class="botao__container">
           <button class="botao"><a href="/login.html">Já tenho conta</a></button>
           <button class="botao"><a href="/cadastro.html">Quero me cadastrar</a></button>
         </section>
       </section>
-      <section class="ilustracao__container">
+      <!-- <section class="ilustracao__container">
       <img src="/assets/img/Ilustração 1.svg" class="ilustracao__1">
-      </section>
+      </section> -->
     </main>
     <footer>
-      <section class="rodape">
+      <section class="rodape rodape__inicial">
         <p>2022 - Desenvolvido por Alura.</p>
       </section>
     </footer>
