--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
     <header class="cabecalho">
       <section class="cabecalho__container home">
         <nav class="cabecalho__icones">
-          <a href="#" class="icone__cabecalho cabecalho__logo">
+          <a href="/index.html" class="icone__cabecalho cabecalho__logo">
             <img src="assets/img/Logo_cabecalho.svg" class="cabecalho__logo_icone" alt="Logo da adopet" />
           </a>
-          <a href="#" class="icone__cabecalho cabecalho__home">
+          <a href="/index.html" class="icone__cabecalho cabecalho__home">
             <img src="assets/img/Casa.svg" class="cabecalho__home_icone" alt="Home" />
           </a>
-          <a href="#" class="icone__cabecalho cabecalho__contato">
+          <a href="/mensagem.html" class="icone__cabecalho cabecalho__contato">
             <img src="assets/img/Mensagens.svg" class="cabecalho__contato_icone" alt="Contatos" />
           </a>
         </nav>
